added in the counter

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <div class="span6" id="agentProfile">
             <h2 id="codename"></h2>
             <h3 id="agentName"></h3>
+            <h3>Turns: <span id="turns"></span></h3>
             <h3>Rank: <span id="agentRank"></span></h3>
             <h3>Balance: <span id="agentMoney"></span></h3>
           </div>
